--- a/09-well-being.qmd
+++ b/09-well-being.qmd
@@ -92,6 +92,7 @@ The next code chunks combines two actions for each year:
 I am using the utility package [downloader](https://cran.r-project.org/web/packages/downloader/index.html) by Winston Chang because it provides a wrapper for the `utils::download.file()` function with the advantage that the download procedure works on Windows, Mac OS X, and other Unix-like platforms.
 
 
+
 :::::{.my-r-code}
 :::{.my-r-code-header}
 :::::: {#cnj-download-whr-data}
@@ -327,6 +328,8 @@ save_data_file("whr/2013-coord", page6, "page6.rds")
 
 **Run the code just once manually**. It will restore the coordinates of the table data for the WHR 2013 PDF, tidy the dataset and save the result as R data object in `.rds` format.
 
+Tidying the dataset includes to combine country names if the span two lines and to delete the empty lines with the many NA's. Note also that there is a data entry error in the original PDF (see: page 5, second last line, column 6 from the right) that has to be corrected.
+
 ```{r}
 #| label: tidy-pdf-data
 #| eval: false
@@ -380,6 +383,8 @@ WHR_data_2013[146, 1] <- "Trinidad and Tobago"
 WHR_data_2013[154, 1] <- "United Arab Emirates"
 
 ## missing data (data is in wrong previous NA row)
+## the error already appears in the original PDF 
+## (see: page 5, second last line, column 6 from the right)
 WHR_data_2013[154, 6] <- 0.355
 
 WHR_data_2013 <- na.omit(WHR_data_2013)
@@ -408,7 +413,7 @@ save_data_file("whr", WHR_data_2013, "WHR_data_2013.rds")
 
 :::::{.my-example}
 :::{.my-example-header}
-:::::: {#exm-ID-text}
+:::::: {#exm-inspect-whr-data}
 : Inspect WHR data that contains ladder score and ranking
 ::::::
 :::
@@ -429,9 +434,7 @@ save_data_file("whr", WHR_data_2013, "WHR_data_2013.rds")
 ```{r}
 #| label: glimpse-whr-data-2024
 
-WHR_2024 <- base::readRDS("data/whr/WHR_data_2024.rds")
-dplyr::glimpse(WHR_2024)
-
+dplyr::glimpse(base::readRDS("data/whr/WHR_data_2024.rds"))
 ```
 Glimpse at ladder score 2024
 :::
@@ -453,8 +456,7 @@ Glimpse at ladder score 2024
 ```{r}
 #| label: glimpse-whr-data-2023
 
-WHR_2023 <- base::readRDS("data/whr/WHR_data_2023.rds")
-dplyr::glimpse(WHR_2023)
+dplyr::glimpse(base::readRDS("data/whr/WHR_data_2023.rds"))
 ```
 
 Glimpse at ladder score 2023
@@ -476,8 +478,7 @@ Glimpse at ladder score 2023
 ```{r}
 #| label: glimpse-whr-data-2022
 
-WHR_2022 <- base::readRDS("data/whr/WHR_data_2022.rds")
-dplyr::glimpse(WHR_2022)
+dplyr::glimpse(base::readRDS("data/whr/WHR_data_2022.rds"))
 ```
 
 Glimpse at ladder score 2022
@@ -499,8 +500,7 @@ Glimpse at ladder score 2022
 ```{r}
 #| label: glimpse-whr-data-2021
 
-WHR_2021 <- base::readRDS("data/whr/WHR_data_2021.rds")
-dplyr::glimpse(WHR_2021)
+dplyr::glimpse(base::readRDS("data/whr/WHR_data_2021.rds"))
 ```
 
 Glimpse at ladder score 2021
@@ -522,8 +522,7 @@ Glimpse at ladder score 2021
 ```{r}
 #| label: glimpse-whr-data-2020
 
-WHR_2020 <- base::readRDS("data/whr/WHR_data_2020.rds")
-dplyr::glimpse(WHR_2020)
+dplyr::glimpse(base::readRDS("data/whr/WHR_data_2020.rds"))
 ```
 
 Glimpse at ladder score 2020
@@ -545,8 +544,7 @@ Glimpse at ladder score 2020
 ```{r}
 #| label: glimpse-whr-data-2019
 
-WHR_2019 <- base::readRDS("data/whr/WHR_data_2019.rds")
-dplyr::glimpse(WHR_2019)
+dplyr::glimpse(base::readRDS("data/whr/WHR_data_2019.rds"))
 ```
 
 Glimpse at ladder score 2019
@@ -568,8 +566,7 @@ Glimpse at ladder score 2019
 ```{r}
 #| label: glimpse-whr-data-2018
 
-WHR_2018 <- base::readRDS("data/whr/WHR_data_2018.rds")
-dplyr::glimpse(WHR_2018)
+dplyr::glimpse(base::readRDS("data/whr/WHR_data_2018.rds"))
 ```
 
 Glimpse at ladder score 2018
@@ -591,8 +588,7 @@ Glimpse at ladder score 2018
 ```{r}
 #| label: glimpse-whr-data-2017
 
-WHR_2017 <- base::readRDS("data/whr/WHR_data_2017.rds")
-dplyr::glimpse(WHR_2017)
+dplyr::glimpse(base::readRDS("data/whr/WHR_data_2017.rds"))
 ```
 
 Glimpse at ladder score 2017
@@ -614,8 +610,7 @@ Glimpse at ladder score 2017
 ```{r}
 #| label: glimpse-whr-data-2016
 
-WHR_2016 <- base::readRDS("data/whr/WHR_data_2016.rds")
-dplyr::glimpse(WHR_2016)
+dplyr::glimpse(base::readRDS("data/whr/WHR_data_2016.rds"))
 ```
 
 Glimpse at ladder score 2016
@@ -638,8 +633,7 @@ Glimpse at ladder score 2016
 ```{r}
 #| label: glimpse-whr-data-2015
 
-WHR_2015 <- base::readRDS("data/whr/WHR_data_2015.rds")
-dplyr::glimpse(WHR_2015)
+dplyr::glimpse(base::readRDS("data/whr/WHR_data_2015.rds"))
 ```
 
 Glimpse at ladder score 2015
@@ -661,8 +655,8 @@ Glimpse at ladder score 2015
 ```{r}
 #| label: glimpse-whr-data-2013
 
-WHR_2013 <- base::readRDS("data/whr/WHR_data_2013.rds")
-dplyr::glimpse(WHR_2013)
+dplyr::glimpse(base::readRDS("data/whr/WHR_data_2013.rds"))
+
 ```
 
 Glimpse at ladder score 2013
@@ -685,8 +679,7 @@ Glimpse at ladder score 2013
 ```{r}
 #| label: glimpse-whr-data-2012
 
-WHR_2012 <- base::readRDS("data/whr/WHR_data_2012.rds")
-dplyr::glimpse(WHR_2012)
+dplyr::glimpse(base::readRDS("data/whr/WHR_data_2012.rds"))
 ```
 
 Glimpse at ladder score 2012
@@ -701,5 +694,351 @@ Glimpse at ladder score 2012
 ::::
 :::::
 
-Inspecting the datasets it turned out that there is some variety in the number of rows (observed countries), number of columns (variables) and column names. I am interested only in the country column and the "ladder score" (sometimes "happiness score" and in 2012 just "ladder").
+## Order of first two columns
 
+Inspecting the datasets it turned out that there is some variety in the number of rows (observed countries), number of columns (variables) and column names. I am interested only in the country column and the "ladder score" (sometimes "happiness score" and in 2012 & 2013 just "ladder").
+
+But for my later functions to create ladder score and ranks time series I need the same order of columns. The concrete name is not important because that can be changed in one line. My preferred order is:
+
+- first column: country (or similar name)
+- second column: ladder (or similar )
+
+Inspecting @exm-inspect-whr-data I have to change the column order for 
+
+- **2022**: delete first column 'RANK', as I will create column `rank` myself
+- **2021 and 2020**: Relocate second column 'Regional indicator' column 'Ladder score'
+- **2015**: Relocate first column 'WP5 Country' column 'Regional indicator' after column 'Ladder score'
+- **2013**: Move first column 'Region' after column 'Ladder'
+
+To leave the original files untouched but to persevere the same structure of the data object names I will rename those five files and append "_raw" at the end of the file name. The new ".rds" object with the two ordered columns (first = country, second = ladder score) will get the same name structure as the objects presented in the code cunks of @exm-inspect-whr-data ("WHR_data_" + year).
+
+:::::{.my-example}
+:::{.my-example-header}
+:::::: {#exm-order-whr-columns}
+: Order columns for several data frames
+::::::
+:::
+::::{.my-example-container}
+
+::: {.panel-tabset}
+
+###### 2022
+
+:::::{.my-r-code}
+:::{.my-r-code-header}
+:::::: {#cnj-whr-order-columns-2022}
+: Delete first column 'RANK'
+::::::
+:::
+::::{.my-r-code-container}
+::: {#lst-whr-order-columns-2022}
+```{r}
+#| label: whr-order-columns-2022
+#| results: hold
+
+WHR_data_2022_raw <-  base::readRDS("data/whr/WHR_data_2022.rds")
+save_data_file("whr", WHR_data_2022_raw, "WHR_data_2022_raw.rds")
+
+WHR_data_2022 <- WHR_data_2022_raw |> 
+    dplyr::select(-1)
+
+dplyr::glimpse(WHR_data_2022)
+save_data_file("whr", WHR_data_2022, "WHR_data_2022.rds")
+```
+Listing text
+:::
+
+::::
+:::::
+
+
+###### 2021
+
+:::::{.my-r-code}
+:::{.my-r-code-header}
+:::::: {#cnj-whr-order-columns-2021}
+: Order columns for WHR 2021
+::::::
+:::
+::::{.my-r-code-container}
+::: {#lst-whr-order-columns-2021}    
+```{r}
+#| label: whr-order-columns-2021
+#| results: hold
+
+WHR_data_2021_raw <-  base::readRDS("data/whr/WHR_data_2021.rds")
+save_data_file("whr", WHR_data_2021_raw, "WHR_data_2021_raw.rds")
+
+WHR_data_2021 <- WHR_data_2021_raw |> 
+    dplyr::relocate("Regional indicator", .after = "Ladder score")
+
+dplyr::glimpse(WHR_data_2021)
+save_data_file("whr", WHR_data_2021, "WHR_data_2021.rds")
+```
+
+Listing text
+:::
+
+::::
+:::::
+
+###### 2020
+
+:::::{.my-r-code}
+:::{.my-r-code-header}
+:::::: {#cnj-whr-order-columns-2020}
+: Order columns for WHR 2020
+::::::
+:::
+::::{.my-r-code-container}
+::: {#lst-whr-order-columns-2020}    
+```{r}
+#| label: whr-order-columns-2020
+#| results: hold
+
+WHR_data_2020_raw <-  base::readRDS("data/whr/WHR_data_2020.rds")
+save_data_file("whr", WHR_data_2020_raw, "WHR_data_2020_raw.rds")
+
+WHR_data_2020 <- WHR_data_2020_raw |> 
+    dplyr::relocate("Regional indicator", .after = "Ladder score")
+
+dplyr::glimpse(WHR_data_2020)
+save_data_file("whr", WHR_data_2020, "WHR_data_2020.rds")
+```
+
+Listing text
+:::
+
+::::
+:::::
+
+###### 2015
+
+:::::{.my-r-code}
+:::{.my-r-code-header}
+:::::: {#cnj-whr-order-columns-2015}
+: Order columns for WHR 2015
+::::::
+:::
+::::{.my-r-code-container}
+::: {#lst-whr-order-columns-2015}    
+```{r}
+#| label: whr-order-columns-2015
+#| results: hold
+
+WHR_data_2015_raw <-  base::readRDS("data/whr/WHR_data_2015.rds")
+save_data_file("whr", WHR_data_2015_raw, "WHR_data_2015_raw.rds")
+
+
+WHR_data_2015 <- WHR_data_2015_raw  |> 
+    dplyr::relocate("WP5 Country", .after = "Ladder score") |> 
+    dplyr::relocate("Regional indicator", .after = "Ladder score")
+
+dplyr::glimpse(WHR_data_2015)
+save_data_file("whr", WHR_data_2015, "WHR_data_2015.rds")
+```
+
+Listing text
+:::
+
+::::
+:::::
+
+###### 2013
+
+:::::{.my-r-code}
+:::{.my-r-code-header}
+:::::: {#cnj-whr-order-columns-2013}
+: Order columns for WHR 2013
+::::::
+:::
+::::{.my-r-code-container}
+::: {#lst-whr-order-columns-2013}    
+
+2013 is the only year where the data are arranged by country and not by descending ladder score. I will therefore change the sorting to get compatibility with the other years.
+
+```{r}
+#| label: whr-order-columns-2013
+#| results: hold
+
+WHR_data_2013_raw <-  base::readRDS("data/whr/WHR_data_2013.rds")
+save_data_file("whr", WHR_data_2013_raw, "WHR_data_2013_raw.rds")
+
+WHR_data_2013 <- WHR_data_2013_raw |> 
+    dplyr::relocate("Region", .after = "Ladder") |> 
+    dplyr::arrange(dplyr::desc(Ladder))
+
+dplyr::glimpse(WHR_data_2013)
+save_data_file("whr", WHR_data_2013, "WHR_data_2013.rds")
+```
+
+Listing text
+:::
+
+::::
+:::::
+
+:::
+
+::::
+:::::
+
+***
+
+## Create Dataset 
+
+For comparisons I need a dataset with the variables
+- Country (`country`)
+- Ladder score for every year (`l_2012`, `l_2013`, …)
+- Rank for every year (`r_2012`, `r_2013`, …)
+
+:::::{.my-r-code}
+:::{.my-r-code-header}
+:::::: {#cnj-create-whr-dataset}
+: Create WHR dataset with country, ladder score and rank
+::::::
+:::
+::::{.my-r-code-container}
+::: {#lst-chaplisting-ID}
+```{r}
+#| label: create-whr-dataset
+#| results: hold
+
+create_folder(base::paste0(here::here(), "/data/whr/ladder"))
+
+create_ladder_table <- function(year) {
+    string_orig <- base::paste0("data/whr/WHR_data_", year, ".rds")
+    df_orig <- base::readRDS(string_orig)
+    df_new <- base::paste0("WHR_", year)
+    l_year <- paste0("l_", year)
+    r_year <- paste0("r_", year)
+    
+    df_new <- df_orig |> 
+        dplyr::select(1,2) |> 
+        dplyr::mutate(r_year = dplyr::row_number()) |> 
+        dplyr::rename_with(.fn = ~c("country", l_year, r_year)) |> 
+        dplyr::arrange(country)
+}
+
+ladder_2024 <- create_ladder_table(2024)
+save_data_file("whr/ladder", ladder_2024, "WHR_ladder_2024.rds")
+
+ladder_2023 <- create_ladder_table(2023)
+save_data_file("whr/ladder", ladder_2023, "WHR_ladder_2023.rds")
+
+ladder_2022 <- create_ladder_table(2022)
+save_data_file("whr/ladder", ladder_2022, "WHR_ladder_2022.rds")
+
+ladder_2021 <- create_ladder_table(2021)
+save_data_file("whr/ladder", ladder_2021, "WHR_ladder_2021.rds")
+
+ladder_2020 <- create_ladder_table(2020)
+save_data_file("whr/ladder", ladder_2020, "WHR_ladder_2020.rds")
+
+ladder_2019 <- create_ladder_table(2019)
+save_data_file("whr/ladder", ladder_2019, "WHR_ladder_2019.rds")
+
+ladder_2018 <- create_ladder_table(2018)
+save_data_file("whr/ladder", ladder_2018, "WHR_ladder_2018.rds")
+
+ladder_2017 <- create_ladder_table(2017)
+save_data_file("whr/ladder", ladder_2017, "WHR_ladder_2017.rds")
+
+ladder_2016 <- create_ladder_table(2016)
+save_data_file("whr/ladder", ladder_2016, "WHR_ladder_2016.rds")
+
+ladder_2015 <- create_ladder_table(2015)
+save_data_file("whr/ladder", ladder_2015, "WHR_ladder_2015.rds")
+
+ladder_2013 <- create_ladder_table(2013)
+save_data_file("whr/ladder", ladder_2013, "WHR_ladder_2013.rds")
+
+ladder_2012 <- create_ladder_table(2012)
+save_data_file("whr/ladder", ladder_2012, "WHR_ladder_2012.rds")
+
+
+whr_join <- dplyr::full_join(ladder_2024, ladder_2023, by = "country") |> 
+    dplyr::full_join(ladder_2022, by = "country") |> 
+    dplyr::full_join(ladder_2021, by = "country") |> 
+    dplyr::full_join(ladder_2020, by = "country") |> 
+    dplyr::full_join(ladder_2019, by = "country") |> 
+    dplyr::full_join(ladder_2018, by = "country") |> 
+    dplyr::full_join(ladder_2017, by = "country") |> 
+    dplyr::full_join(ladder_2016, by = "country") |> 
+    dplyr::full_join(ladder_2015, by = "country") |> 
+    dplyr::full_join(ladder_2013, by = "country") |> 
+    dplyr::full_join(ladder_2012, by = "country")
+
+```
+
+Listing title
+:::
+
+::::
+:::::
+
+
+:::::{.my-r-code}
+:::{.my-r-code-header}
+:::::: {#cnj-ID-text}
+: Numbered R Code Title
+::::::
+:::
+::::{.my-r-code-container}
+::: {#lst-chaplisting-ID}
+```{r}
+#| label: prepare-test-figures
+
+df_ladder <- whr_join |> 
+    dplyr::select(c(1, dplyr::starts_with("l_"))) |> 
+    dplyr::filter(country %in% c(
+        "Austria", 
+        "Germany",
+        "United Kingdom",
+        "United States",
+        "Finland"
+        )) |>
+    tidyr::pivot_longer(cols = c(l_2024:l_2012), 
+                         names_to = "year", 
+                         values_to = "score")
+
+p1 <- ggplot2::ggplot(df_ladder, ggplot2::aes(
+        x = year , 
+        y = score, 
+        color = country,
+        group = country)) +
+    ggplot2::geom_line() 
+
+p1
+
+
+df_rank <- whr_join |> 
+    dplyr::select(c(1, dplyr::starts_with("r_"))) |> 
+    dplyr::filter(country %in% c("Austria", 
+                                 "Germany", 
+                                 "United Kingdom",
+                                 "United States",
+                                 "Finland")) |>
+    tidyr::pivot_longer(cols = c(r_2024:r_2012), 
+                         names_to = "year", 
+                         values_to = "rank")
+
+p2 <- ggplot2::ggplot(df_rank, ggplot2::aes(
+        x = year , 
+        y = rank, 
+        color = country,
+        group = country)) +
+    ggplot2::geom_line() 
+
+p2
+
+
+
+
+```
+
+Listing title
+:::
+
+::::
+:::::
